fix: fix placeholder color on dark mode

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -150,7 +150,7 @@ body {
                     }
 
                     &::placeholder {
-                        color: rgba(0, 0, 0, 0.4);
+                        color: var(--foreground);
                     }
                 }
 
